--- a/src/components/Menus/menus.css
+++ b/src/components/Menus/menus.css
@@ -21,6 +21,10 @@
     font-weight: bold;
 }
 
+.nav-link:hover {
+    filter: opacity(50%);
+}
+
 .nav-items {
     margin-top: 30px;
     display: flex;
@@ -29,7 +33,7 @@
     justify-content: center;
 }
 
-.nav-item {
+.nav-items > * {
     margin: 20px;
 }
 
