--- a/src/components/ProjectCard/projectCard.css
+++ b/src/components/ProjectCard/projectCard.css
@@ -1,6 +1,6 @@
 .project-card-div {
     display: grid;
-    grid-template-columns: 2fr 2fr 200px;
+    grid-template-columns: 2fr 1fr 1fr;
     gap: 10px;
     border: 1px solid black;
     border-radius: 20px;
@@ -17,6 +17,14 @@
 
 .project-thumbnail img {
     border-radius: 20px;
+    transition: width 0.5s, height 0.5s;
+    border: 1px solid black;
+}
+
+.project-thumbnail img:hover {
+    /* transform: scale(1.5); */
+    width: 110%;
+    /* overflow: visible; */
 }
 
 /* .project-card-div:hover {
@@ -29,11 +37,16 @@
 }
 
 .project-stack {
-    display: flex;
+    /* display: flex;
     gap: 5px;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-rows: repeat(5, auto);
+    grid-template-columns: repeat(2, auto);
+    row-gap: 5px;
+    
 }
 
 .tech {
@@ -43,6 +56,9 @@
     padding: 5px;
     font-weight: bold;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tech:hover {
@@ -56,9 +72,12 @@
 }
 
 
-@media (max-width: 850px) {
+/* @media (max-width: 1200px) {
     .project-card-div {
         grid-template-columns: 1fr;
-
     }
-}
+    .project-stack {
+        display: flex;
+        flex-wrap: wrap;
+    }
+} */
