--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -94,7 +94,7 @@ button:focus {
 
 /* ======================== */
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .contact {
     margin: 0;
     padding: 0;
@@ -110,4 +110,4 @@ button:focus {
     align-items: center;
     justify-content: center;
   }
-}
+} */
