--- a/src/pages/Skills/skills.css
+++ b/src/pages/Skills/skills.css
@@ -44,10 +44,10 @@
     background-color: white;
     /* background-color: lightblue; */
 }
-
+/* 
 @media screen and (max-width: 768px) {
     .skills-container {
         margin: 0;
-        margin-right: -240px;
+        margin-right: -500px;
     }
-}
+} */
