--- a/src/components/ProjectCard/projectCard.css
+++ b/src/components/ProjectCard/projectCard.css
@@ -36,6 +36,10 @@
     font-weight: bold;
 }
 
+.project-description {
+    font-weight:700;
+}
+
 .project-stack {
     /* display: flex;
     gap: 5px;
